--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/xcbfpq327/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228652753-320x200.jpg"><p align="center">【大选更新11.5】川普在内华达州提诉</p></a>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普在内华达州提诉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228652753-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280635720-320x200.jpg"><p align="center">【直播】川普团队拉斯维加斯举行重要发布会</p></a>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1" title="【直播】川普团队拉斯维加斯举行重要发布会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280635720-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】川普：宾州巨大法律胜利""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229449400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527603.md#1" title="云南最大商贸城租金暴涨 数万商户罢市抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/4bd9021a9aec8230082bd11e3cbbbc6e-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526625.md#1" title="【专访】两党人士批评美大选民调失准""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283442236-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1" title="【思想领袖】纳瓦罗：美媒成中共“有用白痴”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50e3caa58e60cbf457ec145091d24dbc-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525930.md#1" title="【重播】大选生变 摇摆州疑舞弊 法律战开打""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525819.md#1" title="加州选民彻夜盯票 发现诡异现象疑作弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】川普宣布在宾州等三州获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526503.md#1">梦想当工程师 英8岁童创办吸尘器维修服务</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11.5】川普在内华达州提诉</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527787.md#1">宾州民主党延期计票涉违法 高院要求其回应</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527662.md#1">川普拿下乔州 参院一席复选 众议员一席翻蓝</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527809.md#1">疫情急飙 美单日首破10万 欧洲多国封锁</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527383.md#1">国家能源局副局长被免职 多省能源局官员落马</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520407.md#1">【直播】川普团队拉斯维加斯举行重要发布会</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526503.md#1">梦想当工程师 英8岁童创办吸尘器维修服务</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11.5】川普：宾州巨大法律胜利</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527787.md#1">宾州民主党延期计票涉违法 高院要求其回应</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527662.md#1">川普领先乔州 参院一席复选 众议员一席翻蓝</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527809.md#1">疫情急飙 美单日首破10万 欧洲多国封锁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,921,432 人
+!共 366,921,476 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
