--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525930.md#1" title="【重播】大选生变 摇摆州疑舞弊 法律战开打""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525819.md#1" title="加州选民彻夜盯票 发现诡异现象疑作弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526869.md#1">全球首辆飞行汽车获准上路 两年内或上天</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527852.md#1">上万人疑冒充本地选民 川普内华达提诉</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527807.md#1">蚂蚁集团上市前夕喊停 众多散户蒙受损失</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527362.md#1">【珍言真语】陶杰：美大选是南北战后最大内战</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527804.md#1">高瑜：中共红二代支持川普 批评拜登舞弊</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527739.md#1">美第3季非农生产力涨4.9% 劳工成本下滑</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527964.md#1">福克斯女知名主播质疑大选舞弊 列四大疑点</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526869.md#1">全球首辆飞行汽车获准上路 两年内或上天</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527852.md#1">上万人疑冒充本地选民 川普内华达提诉</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527807.md#1">蚂蚁集团上市前夕喊停 众多散户蒙受损失</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527362.md#1">【珍言真语】陶杰：美大选是南北战后最大内战</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527804.md#1">高瑜：中共红二代支持川普 批评拜登舞弊</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
